# trass-course

./: .travis.yml  README.md  trass-course.cabal
src/Trass/: Course.hs
src/Trass/Course/: Section.hs  Task.hs  Util.hs
