name:                trass-course
version:             0.1
synopsis:            TRASS course management.
-- description:         
homepage:            https://github.com/trass/trass-course
bug-reports:         https://github.com/trass/trass-course/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Trass.Course
    Trass.Course.Section
    Trass.Course.Task
    Trass.Course.Util
  default-extensions:
    OverloadedStrings
    RecordWildCards
  build-depends:      base >=4.7 && <4.8
                    , text
                    , yaml
                    , directory
                    , filepath
                    , trass-lxc

source-repository head
  type: git
  location: https://github.com/trass/trass-course.git
  branch: master
